# skycast

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json
.zed/: settings.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ForecastChart.tsx  MetricCard.tsx  WeatherIcon.tsx  WeatherScene.tsx
src/lib/: units.ts  weather.ts  weatherCodes.ts
