[package]
name = "skycast"
version = "0.1.3"
description = "A modern Tauri weather forecasting dashboard"
authors = ["Vivek"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
